[project]
name = "pywnp"
version = "2.0.0"
description = "A python library to communicate with the WebNowPlaying-Redux browser extension"
authors = [ { name="keifufu", email="pypi@keifufu.dev" } ]
readme = "README.md"
license = { file = "LICENSE" }
keywords = [ "webnowplaying", "wnp", "youtube", "spotify", "media", "music" ]
requires-python = ">=3.7"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [ "websockets", "winsdk ; platform_system == 'Windows'" ]

[project.urls]
"Homepage" = "https://github.com/keifufu/PyWNP"
"Bug Tracker" = "https://github.com/keifufu/PyWNP/issues"